hphp/test/zend/good/ext/gettext/tests/gettext_gettext_error_wrongparams.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("gettext")) {
    die("skip extension gettext not loaded\n");
}
}
