hphp/test/zend/bad/ext/openssl/tests/stream_verify_peer_name_001.php.skipif
<?php
if (!extension_loaded("openssl")) die("skip openssl not loaded");
if (!function_exists("proc_open")) die("skip no proc_open");